syntax = "proto3";

package auth;
option go_package = "github.com/FUNfarik/finance_microservices/proto/auth";

// Messages
message VerifyTokenRequest {
    string token = 1;
 }

 message VerifyTokenResponse {
    bool valid = 1;
    int32 user_id = 2;
    string username = 3;
    string error_message = 4;
 }

 message GetUserRequest {
    int32 user_id = 1;
}

message GetUserResponse {
    int32 user_id = 1;
    string username = 2;
    string email = 3;
    double cash_balance = 4;
    string error_message = 5;
}

// Service define availiable operations
service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}