syntax = "proto3";

package market;
option go_package = "github.com/FUNfarik/finance_microservices/proto/market";

message GetStockPriceRequest {
  string symbol = 1;
}

message GetStockPriceResponse {
  string symbol = 1;
  string name = 2;
  double current_price = 3;
  double change_percent = 4;
  bool success = 5;
  string error_message = 6;
}

message GetMultipleStocksRequest {
  repeated string symbols = 1;  // "repeated" = array/slice
}

message GetMultipleStocksResponse {
  repeated GetStockPriceResponse stocks = 1;
  bool success = 2;
  string error_message = 3;
}

service MarketDataService {
  rpc GetStockPrice(GetStockPriceRequest) returns (GetStockPriceResponse);
  rpc GetMultipleStocks(GetMultipleStocksRequest) returns (GetMultipleStocksResponse);
}